# namoral-bot-rs

./: .gitignore  Cargo.toml  README.md  main.tf  output.tf  variables.tf
src/: lib.rs  main.rs
