[package]
name = "namoral-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
aws-sdk-ssm = "0.6.0"
lambda_runtime = "0.4.1"
nanoid = "0.4.0"
rand = "0.8.4"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls"] }
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
